add date and name

--- a/sys_info_page.html
+++ b/sys_info_page.html
@@ -4,5 +4,6 @@
 	</HEAD>
 	<BODY>
 		<H1>System Information Report For nadya-Lenovo-G505s</H1>
+		<P>Generated 12/29/2019 04:15:06 PM MSK, by nadya</P>
 	</BODY>
 </HTML>
