--- a/sys_info_page.html
+++ b/sys_info_page.html
@@ -4,6 +4,9 @@
 	</HEAD>
 	<BODY>
 		<H1>System Information Report For nadya-Lenovo-G505s</H1>
-		<P>Generated 12/29/2019 04:54:57 PM MSK, by nadya</P>
+		<P>Generated 12/30/2019 08:40:48 AM MSK, by nadya</P>
+		Function report_uptime executed.
+		Function report_disk_space executed.
+		Function report_home_space executed.
 	</BODY>
 </HTML>
