--- a/sys_info_page.html
+++ b/sys_info_page.html
@@ -4,8 +4,9 @@
 	</HEAD>
 	<BODY>
 		<H1>System Information Report For nadya-Lenovo-G505s</H1>
-		<P>Generated 12/30/2019 08:40:48 AM MSK, by nadya</P>
-		Function report_uptime executed.
+		<P>Generated 12/30/2019 08:53:37 AM MSK, by nadya</P>
+		<H2>System Uptime</H2>
+<PRE> 08:53:37 up 17:44,  1 user,  load average: 0,34, 0,49, 0,39</PRE>
 		Function report_disk_space executed.
 		Function report_home_space executed.
 	</BODY>
