add disk_space function

--- a/sys_info_page.html
+++ b/sys_info_page.html
@@ -4,10 +4,12 @@
 	</HEAD>
 	<BODY>
 		<H1>System Information Report For nadya-Lenovo-G505s</H1>
-		<P>Generated 12/30/2019 08:53:37 AM MSK, by nadya</P>
+		<P>Generated 12/30/2019 09:03:27 AM MSK, by nadya</P>
 		<H2>System Uptime</H2>
-<PRE> 08:53:37 up 17:44,  1 user,  load average: 0,34, 0,49, 0,39</PRE>
-		Function report_disk_space executed.
+<PRE> 09:03:27 up 17:54,  1 user,  load average: 0,12, 0,23, 0,29</PRE>
+		<H2>System Space Utilization</H2>
+<PRE>Filesystem      Size  Used Avail Use% Mounted on
+/dev/sda5       813G   26G  746G   4% /</PRE>
 		Function report_home_space executed.
 	</BODY>
 </HTML>
