--- a/sys_info_page.html
+++ b/sys_info_page.html
@@ -1,15 +1,26 @@
 <HTML>
 	<HEAD>
-		<TITLE>System Information Report For nadya-Lenovo-G505s</TITLE>
+		<TITLE>System Information Report For nadyapc</TITLE>
 	</HEAD>
 	<BODY>
-		<H1>System Information Report For nadya-Lenovo-G505s</H1>
-		<P>Generated 12/30/2019 09:03:27 AM MSK, by nadya</P>
+		<H1>System Information Report For nadyapc</H1>
+		<P>Generated 09/01/20  4:20:00 pm MSK MSK, by nadya</P>
 		<H2>System Uptime</H2>
-<PRE> 09:03:27 up 17:54,  1 user,  load average: 0,12, 0,23, 0,29</PRE>
-		<H2>System Space Utilization</H2>
+<PRE> 16:20:00 up  7:20,  1 user,  load average: 0,44, 0,23, 0,21</PRE>
+		<H2>Disk Space Utilization</H2>
 <PRE>Filesystem      Size  Used Avail Use% Mounted on
-/dev/sda5       813G   26G  746G   4% /</PRE>
-		Function report_home_space executed.
+udev            7,8G     0  7,8G   0% /dev
+tmpfs           1,6G  2,4M  1,6G   1% /run
+/dev/sda6       281G   16G  252G   6% /
+tmpfs           7,8G  121M  7,7G   2% /dev/shm
+tmpfs           5,0M  4,0K  5,0M   1% /run/lock
+tmpfs           7,8G     0  7,8G   0% /sys/fs/cgroup
+/dev/sda7       631G   85G  514G  15% /home
+/dev/sda1       487M  6,1M  480M   2% /boot/efi
+tmpfs           1,6G   80K  1,6G   1% /run/user/1000
+/dev/sdb1        15G  696M   14G   5% /media/nadya/70DB-C597</PRE>
+		        <H2>Home Space Utilization</H2>
+        <PRE>16K	/home/lost+found
+85G	/home/nadya</PRE>
 	</BODY>
 </HTML>
