--- a/sys_info_page.html
+++ b/sys_info_page.html
@@ -1,26 +1,24 @@
 <HTML>
 	<HEAD>
-		<TITLE>System Information Report For nadyapc</TITLE>
+		<TITLE>System Information Report For nadya-Lenovo-G505s</TITLE>
 	</HEAD>
 	<BODY>
-		<H1>System Information Report For nadyapc</H1>
-		<P>Generated 09/01/20  4:20:00 pm MSK MSK, by nadya</P>
+		<H1>System Information Report For nadya-Lenovo-G505s</H1>
+		<P>Generated 05/17/2020 09:51:37 PM MSK, by nadya</P>
 		<H2>System Uptime</H2>
-<PRE> 16:20:00 up  7:20,  1 user,  load average: 0,44, 0,23, 0,21</PRE>
+<PRE> 21:51:37 up 11:32,  1 user,  load average: 2,24, 1,14, 0,88</PRE>
 		<H2>Disk Space Utilization</H2>
 <PRE>Filesystem      Size  Used Avail Use% Mounted on
-udev            7,8G     0  7,8G   0% /dev
-tmpfs           1,6G  2,4M  1,6G   1% /run
-/dev/sda6       281G   16G  252G   6% /
-tmpfs           7,8G  121M  7,7G   2% /dev/shm
+udev            3,5G     0  3,5G   0% /dev
+tmpfs           716M  1,4M  715M   1% /run
+/dev/sda5       813G  112G  659G  15% /
+tmpfs           3,5G  157M  3,4G   5% /dev/shm
 tmpfs           5,0M  4,0K  5,0M   1% /run/lock
-tmpfs           7,8G     0  7,8G   0% /sys/fs/cgroup
-/dev/sda7       631G   85G  514G  15% /home
-/dev/sda1       487M  6,1M  480M   2% /boot/efi
-tmpfs           1,6G   80K  1,6G   1% /run/user/1000
-/dev/sdb1        15G  696M   14G   5% /media/nadya/70DB-C597</PRE>
-		        <H2>Home Space Utilization</H2>
-        <PRE>16K	/home/lost+found
-85G	/home/nadya</PRE>
+tmpfs           3,5G     0  3,5G   0% /sys/fs/cgroup
+/dev/sda2       256M   35M  222M  14% /boot/efi
+tmpfs           716M   80K  716M   1% /run/user/1000
+/dev/sdb1        29G  2,3G   25G   9% /media/nadya/1002318d-ea7e-47c2-9faf-5cbcdc47a5711</PRE>
+		            <H2>Home Space Utilization (nadya)</H2>
+            <PRE>96G	/home/nadya</PRE>
 	</BODY>
 </HTML>
